# lexman-ble

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
custom_components/lexman_ble/: __init__.py  config_flow.py  const.py  light.py  manifest.json  models.py  typing.py
custom_components/lexman_ble/lexman_ble/: __init__.py  const.py  models.py
custom_components/lexman_ble/translations/: en.json
src/lexman_ble/: cct_smart_bulb.py
