[project]
name = "lexman-ble"
version = "0.1.2"
description = "Lexman CCT Smart Bulb control through bluetooth in Python"
authors = [{name = "David Freire", email = "davidsmfreire@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "bleak-retry-connector>=3.9.0",
    "bleak>=0.22.0",
    "parse~=1.20.2",
    "bluetooth-data-tools>=1.26.2"
]

[tool.uv]
default-groups = "all"

[dependency-groups]
ha = [
    "homeassistant>=2025.1.0",
]
dev = [
    "pre-commit >=4.0.1",
    "ruff >=0.11.2",
    "mypy >=1.15.0",
    "isort >=5.13.2",
    "black >=24.10.0",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
exclude_commit_patterns = [
    '''deps(?:\([^)]*?\))?: .+''',
]
