[project]
name = "lexman-ble"
version = "0.1.2"
description = "Home Assistant integration for Lexman CCT smart bulbs (BLE), with the device library vendored under custom_components/lexman_ble/lexman_ble"
authors = [{name = "David Freire", email = "davidsmfreire@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13.0"
# Runtime deps of the vendored BLE library, declared here so the dev/lint
# environment resolves them. At runtime Home Assistant provides bleak,
# bleak-retry-connector and bluetooth-data-tools; only `parse` is shipped via
# the integration manifest's `requirements`.
dependencies = [
    "bleak-retry-connector>=3.9.0",
    "bleak>=0.22.0",
    "parse~=1.20.2",
    "bluetooth-data-tools>=1.26.2"
]

[tool.uv]
default-groups = "all"
# This repo is no longer published as a package; the library is vendored into
# the integration. Treat the project as a non-packaged dev environment.
package = false

[dependency-groups]
ha = [
    "homeassistant>=2025.1.0",
]
dev = [
    "pre-commit >=4.0.1",
    "ruff >=0.11.2",
    "mypy >=1.15.0",
    "isort >=5.13.2",
    "black >=24.10.0",
]
